# caf_gpt

./: .aider.chat.history.md  .aider.conf.yml  .dockerignore  .env.development  .env.example  .env.production  .envrc  .flake8  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  OPTIMIZATION_SUMMARY.md  README.md  aider.sh  docker-compose.yml  flake.nix  fly.toml  manage.py  prompt.md  prompt_template.md  pyproject.toml  requirements.txt  rewrite.md  shell.nix
.ai/: database-integration-plan.md  database-integration-summary.md  database_migration_summary.md  implementation-checklist.md  s3-migration-summary.md
.ai/notepad/: openrouter.md  (+7 more)
.app_logic/: core.md  overview.md  pacenote_foo.md  policy_foo.md  progress.md
.claude/: settings.local.json
.direnv/: nix-profile-24.11-d1n5ak0xa4d17jld  nix-profile-24.11-d1n5ak0xa4d17jld.rc
.github/: copilot-instructions.md
caf_gpt/: asgi.py  settings.py  urls.py  wsgi.py
core/: README.md  __init__.py  apps.py  context_processors.py  middleware.py  models.py  urls.py  views.py
docs/: db_spec.md  quick_start.md
pace_note_foo/: urls.py  views.py
pacenote_foo/: README.md  __init__.py  apps.py  models.py  urls.py  views.py
policy_foo/: README.md  __init__.py  apps.py  models.py  urls.py  views.py
src/: __init__.py  app_logging.py  config.py  llm_interface.py  main.py
templates/: base.html  pace_notes.html
tests/: spam_filter_test.py  test_agent_coordinator.py  test_config.py  test_doad_foo_agent.py  test_document_retriever.py  test_email.py  test_feedback_note_agent.py  test_llm_utils.py  test_pacenote_agent.py
(+134 files in other folders)
